# PointDet

./: .gitignore  environment.yaml  pyproject.toml  setup.py
docker/: Dockerfile  start.sh
src/pointdet/: __init__.py  typing.py
src/pointdet/core/bbox/: box_np_ops.py
src/pointdet/core/points/: __init__.py  interface.py  lidar_points.py
src/pointdet/core/utils/: __init__.py  array_converter.py
src/pointdet/csrc/: ext.cpp
src/pointdet/csrc/ball_query/: ball_query.cu  ball_query.hpp  ball_query_cpu.cpp
src/pointdet/csrc/group_points/: group_points.hpp  group_points_cuda.cu
src/pointdet/csrc/knn/: knn.cu  knn.hpp  knn_cpu.cpp
src/pointdet/csrc/points_in_boxes/: points_in_boxes.hpp  points_in_boxes_cuda.cu
src/pointdet/csrc/sample_farthest_points/: sample_farthest_points.cu  sample_farthest_points.hpp  sample_farthest_points_cpu.cpp
src/pointdet/csrc/utils/: cuda_utils.hpp  dispatch.cuh  index_utils.cuh  mink.cuh  warp_reduce.cuh
src/pointdet/datasets/: __init__.py  interface.py  utils.py
src/pointdet/datasets/kitti/: __init__.py  dataset.py  typing.py
src/pointdet/models/: __init__.py  ia_ssd.py
src/pointdet/ops/: __init__.py  ball_query.py  group_points.py  knn.py  sample_farthest_points.py  sampling.py  utils.py
src/pointdet/transforms/: __init__.py  affine.py  compose.py  gt_sampling.py  noising.py  object_noise.py  points_transforms.py  random_flip.py  transforms.py  utils.py
tools/: prepare_data.py  train.py
tools/conf/kitti/: main.yaml
tools/data_converter/: create_gt_database.py  kitti_converter.py  kitti_ops.py
(+20 files in other folders)
