[build-system]
requires = ['setuptools>=61', 'wheel', 'torch']
build-backend = 'setuptools.build_meta'

[project]
name = 'pointdet'
authors = [{ email = 'itskyf@outlook.com', name = 'Ky Anh' }]
dependencies = [
  'hydra-core',
  'numba',
  'scipy',       # for numba linear algebra
  'pytorch',
  'tensorboard',
  'tqdm',
]
version = '0.0.0'

[tool.black]
line-length = 100

[tool.pylint.design]
max-args = 10

[tool.pylint.main]
extension-pkg-allow-list = ['pointdet._C']

[tool.pylint.messages_control]
disable = ['missing-docstring']

[tool.pylint.typecheck]
generated-members = 'numpy.*,torch.*'

[tool.isort]
profile = 'black'
